fix(3156129296): align login modal to Figma (#303)

--- a/src/components/UI/Modal/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal/Modal.module.scss
@@ -1,7 +1,7 @@
 @import '../../../../index';
 
 .modal {
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(52, 64, 84, 0.6);
   top: 0;
   left: 0;
   right: 0;
